correct statement about knots

--- a/index.html
+++ b/index.html
@@ -320,84 +320,84 @@ window.Quarto = {
 </thead>
 <tbody>
 <tr class="odd">
-<td style="text-align: right;">1564</td>
-<td style="text-align: left;">Venus</td>
-<td style="text-align: left;">FALSE</td>
-<td style="text-align: left;">International Studies</td>
-<td style="text-align: right;">21</td>
-<td style="text-align: right;">0.000</td>
-</tr>
-<tr class="even">
-<td style="text-align: right;">15796</td>
+<td style="text-align: right;">3240</td>
 <td style="text-align: left;">Jupiter</td>
 <td style="text-align: left;">FALSE</td>
-<td style="text-align: left;">Music Recording Technology</td>
-<td style="text-align: right;">17</td>
-<td style="text-align: right;">3.905</td>
-</tr>
-<tr class="odd">
-<td style="text-align: right;">8296</td>
-<td style="text-align: left;">Jupiter</td>
-<td style="text-align: left;">FALSE</td>
-<td style="text-align: left;">International Studies</td>
-<td style="text-align: right;">18</td>
-<td style="text-align: right;">3.532</td>
+<td style="text-align: left;">Marketing Management</td>
+<td style="text-align: right;">22</td>
+<td style="text-align: right;">3.444</td>
 </tr>
 <tr class="even">
-<td style="text-align: right;">6410</td>
-<td style="text-align: left;">Mercury</td>
+<td style="text-align: right;">9170</td>
+<td style="text-align: left;">Jupiter</td>
 <td style="text-align: left;">TRUE</td>
-<td style="text-align: left;">Graphic Communications</td>
-<td style="text-align: right;">39</td>
-<td style="text-align: right;">3.491</td>
+<td style="text-align: left;">Atmospheric Sciences</td>
+<td style="text-align: right;">20</td>
+<td style="text-align: right;">0.942</td>
 </tr>
 <tr class="odd">
-<td style="text-align: right;">6429</td>
+<td style="text-align: right;">14367</td>
 <td style="text-align: left;">Jupiter</td>
 <td style="text-align: left;">FALSE</td>
-<td style="text-align: left;">Atmospheric Sciences</td>
-<td style="text-align: right;">18</td>
-<td style="text-align: right;">0.000</td>
+<td style="text-align: left;">Video/Radio Production</td>
+<td style="text-align: right;">22</td>
+<td style="text-align: right;">2.527</td>
 </tr>
 <tr class="even">
-<td style="text-align: right;">11036</td>
+<td style="text-align: right;">11093</td>
 <td style="text-align: left;">Saturn</td>
 <td style="text-align: left;">FALSE</td>
 <td style="text-align: left;">Music Recording Technology</td>
 <td style="text-align: right;">17</td>
-<td style="text-align: right;">2.970</td>
+<td style="text-align: right;">1.303</td>
 </tr>
 <tr class="odd">
-<td style="text-align: right;">12405</td>
+<td style="text-align: right;">8621</td>
 <td style="text-align: left;">Jupiter</td>
 <td style="text-align: left;">FALSE</td>
 <td style="text-align: left;">Music Recording Technology</td>
 <td style="text-align: right;">17</td>
-<td style="text-align: right;">3.796</td>
+<td style="text-align: right;">3.939</td>
 </tr>
 <tr class="even">
-<td style="text-align: right;">11407</td>
+<td style="text-align: right;">6673</td>
 <td style="text-align: left;">Jupiter</td>
 <td style="text-align: left;">FALSE</td>
-<td style="text-align: left;">Music Recording Technology</td>
-<td style="text-align: right;">17</td>
-<td style="text-align: right;">2.611</td>
-</tr>
-<tr class="odd">
-<td style="text-align: right;">12756</td>
-<td style="text-align: left;">Jupiter</td>
-<td style="text-align: left;">FALSE</td>
-<td style="text-align: left;">Machining Technology</td>
+<td style="text-align: left;">Theatre Arts</td>
 <td style="text-align: right;">20</td>
-<td style="text-align: right;">2.015</td>
+<td style="text-align: right;">2.064</td>
+</tr>
+<tr class="odd">
+<td style="text-align: right;">15553</td>
+<td style="text-align: left;">Jupiter</td>
+<td style="text-align: left;">FALSE</td>
+<td style="text-align: left;">International Studies</td>
+<td style="text-align: right;">31</td>
+<td style="text-align: right;">1.202</td>
 </tr>
 <tr class="even">
-<td style="text-align: right;">10598</td>
+<td style="text-align: right;">756</td>
+<td style="text-align: left;">Jupiter</td>
+<td style="text-align: left;">FALSE</td>
+<td style="text-align: left;">International Studies</td>
+<td style="text-align: right;">38</td>
+<td style="text-align: right;">3.581</td>
+</tr>
+<tr class="odd">
+<td style="text-align: right;">7911</td>
+<td style="text-align: left;">Jupiter</td>
+<td style="text-align: left;">FALSE</td>
+<td style="text-align: left;">Music Recording Technology</td>
+<td style="text-align: right;">16</td>
+<td style="text-align: right;">3.944</td>
+</tr>
+<tr class="even">
+<td style="text-align: right;">1698</td>
 <td style="text-align: left;">Jupiter</td>
 <td style="text-align: left;">TRUE</td>
-<td style="text-align: left;">Exercise Sci/Kinesiology</td>
-<td style="text-align: right;">22</td>
-<td style="text-align: right;">3.919</td>
+<td style="text-align: left;">Engineering/Electrical</td>
+<td style="text-align: right;">38</td>
+<td style="text-align: right;">0.000</td>
 </tr>
 </tbody>
 </table>
@@ -2158,7 +2158,7 @@ psi3.age      NA 39.00000 8.6167071</code></pre>
 </div>
 </div>
 </div>
-<p>There’s no rule that says knots have to be spaced evenly. One common approach is to put the knots at quantiles of the observed distribution, which permits more wiggliness in the regions where you have more data. It’s even possible to have adjacent identical knots – in fact, this happens in our example dataset, with two knots at age 17 because of the density of observations in that region.</p>
+<p>There’s no rule that says knots have to be spaced evenly. One common approach is to put the knots at quantiles of the observed distribution, which permits more wiggliness in the regions where you have more data.</p>
 <div class="cell">
 <div class="cell-output-display">
 <div>
